Fixed compiler errors