@@ -9,6 +9,7 @@ import java.util.stream.Collectors;
 
 import com.luneruniverse.minecraft.mod.nbteditor.multiversion.MVComponentType;
 import com.luneruniverse.minecraft.mod.nbteditor.multiversion.MVMisc;
+import com.luneruniverse.minecraft.mod.nbteditor.multiversion.Reflection;
 import com.luneruniverse.minecraft.mod.nbteditor.multiversion.Version;
 import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.general.ComponentTagReference;
 import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.general.NBTTagReference;
@@ -22,6 +23,10 @@ import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.specific.GameProf
 import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.specific.data.AttributeData;
 import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.specific.data.CustomPotionContents;
 import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.specific.data.Enchants;
+import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.specific.data.hideflags.HideFlag;
+import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.specific.hideflags.HideFlagsComponentsTagReference;
+import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.specific.hideflags.HideFlagsNBTTagReference;
+import com.luneruniverse.minecraft.mod.nbteditor.tagreferences.specific.hideflags.HideFlagsTooltipDisplayComponentTagReference;
 import com.mojang.authlib.GameProfile;
 import com.mojang.authlib.properties.PropertyMap;
 
@@ -30,7 +35,6 @@ import net.minecraft.component.type.BlockStateComponent;
 import net.minecraft.component.type.LoreComponent;
 import net.minecraft.component.type.NbtComponent;
 import net.minecraft.component.type.ProfileComponent;
-import net.minecraft.component.type.UnbreakableComponent;
 import net.minecraft.component.type.WritableBookContentComponent;
 import net.minecraft.item.ItemStack;
 import net.minecraft.nbt.NbtCompound;
@@ -72,11 +76,11 @@ public class ItemTagReferences {
 	
 	public static final TagReference<List<AttributeData>, ItemStack> ATTRIBUTES = Version.<TagReference<List<AttributeData>, ItemStack>>newSwitch()
 			.range("1.20.5", null, () -> new ComponentTagReference<>(MVComponentType.ATTRIBUTE_MODIFIERS,
-					() -> new AttributeModifiersComponent(List.of(), true),
-					component -> component.modifiers().stream().map(AttributeData::fromComponentEntry).collect(Collectors.toList()),
-					(component, list) -> new AttributeModifiersComponent(
-							list.stream().map(AttributeData::toComponentEntry).toList(),
-							component == null ? true : component.showInTooltip())))
+					null,
+					component -> component == null ? new ArrayList<>() :
+						component.modifiers().stream().map(AttributeData::fromComponentEntry).collect(Collectors.toList()),
+					(component, list) -> (AttributeModifiersComponent) MVMisc.withAttributes(component,
+							list.stream().map(AttributeData::toComponentEntry).toList())))
 			.range(null, "1.20.4", () -> TagReference.forItems(ArrayList::new, new AttributesNBTTagReference(AttributesNBTTagReference.NBTLayout.ITEM_OLD)))
 			.get();
 	
@@ -89,7 +93,8 @@ public class ItemTagReferences {
 			.get();
 	
 	public static final TagReference<Boolean, ItemStack> UNBREAKABLE = Version.<TagReference<Boolean, ItemStack>>newSwitch()
-			.range("1.20.5", null, () -> ComponentTagReference.forExistance(MVComponentType.UNBREAKABLE, () -> new UnbreakableComponent(true)))
+			.range("1.21.5", null, () -> ComponentTagReference.forExistance(MVComponentType.UNBREAKABLE_1_21_5))
+			.range("1.20.5", "1.21.4", () -> ComponentTagReference.forExistance(MVComponentType.UNBREAKABLE_1_20_5_1_21_4, () -> Reflection.newInstance("net.minecraft.class_9300", new Class<?>[] {boolean.class}, true)))
 			.range(null, "1.20.4", () -> TagReference.forItems(() -> false, new NBTTagReference<>(Boolean.class, "Unbreakable")))
 			.get();
 	
@@ -104,7 +109,7 @@ public class ItemTagReferences {
 					component -> component == null ? new HashMap<>() : new HashMap<>(component.properties()),
 					BlockStateComponent::new))
 			.range(null, "1.20.4", () -> TagReference.forItems(HashMap::new, TagReference.forMaps(
-					element -> element instanceof NbtString str ? str.asString() : null,
+					element -> element instanceof NbtString str ? MVMisc.value(str) : null,
 					NbtString::of,
 					new NBTTagReference<>(NbtCompound.class, "BlockStateTag"))))
 			.get();
@@ -127,6 +132,12 @@ public class ItemTagReferences {
 					component -> new ArrayList<>(component.lines()),
 					lore -> new LoreComponent(lore.stream().limit(256).toList())))
 			.range(null, "1.20.4", () -> TagReference.forItems(ArrayList::new, TagReference.forLists(Text.class, new NBTTagReference<>(Text[].class, "display/Lore"))))
+			.get();
+	
+	public static final TagReference<Map<HideFlag, Boolean>, ItemStack> HIDE_FLAGS = Version.<TagReference<Map<HideFlag, Boolean>, ItemStack>>newSwitch()
+			.range("1.21.5", null, () -> new HideFlagsTooltipDisplayComponentTagReference())
+			.range("1.20.5", "1.21.4", () -> new HideFlagsComponentsTagReference())
+			.range(null, "1.20.4", () -> new HideFlagsNBTTagReference())
 			.get();
 	
 }
